[tool.poetry]
name = "mongo-types"
version = "0.15.1"
description = "Type stubs for mongoengine w/ basic support for bson and pymongo"
repository = "https://github.com/sbdchd/mongo-types"
readme = "README.md"
authors = ["Steve Dignam <steve@dignam.xyz>"]
license = "Apache-2.0"
keywords = ["mongoengine", "mongo", "types", "mypy", "stubs"]

packages = [
  { include = "mongoengine-stubs" },
  { include = "bson-stubs" },
  { include = "pymongo-stubs" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^3.8"
flake8-pyi = "^20.10"
ipython = "^7.19"
isort = "^5.12.0"
mongoengine = "^0.27.0"
wheel = "^0.36.2"
mypy = "^1.6.1"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
